<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".LoginActivityOne">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/facebook"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="133dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="329dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:background="@drawable/registration"
        android:text="@string/register"
        android:textColor="@color/loginButton"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="436dp" />

    <Button
        android:id="@+id/google_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/roundedbtn_google"
        android:text="@string/google"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="133dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="73dp"
        android:layout_height="67dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="16dp"
        android:contentDescription="@string/logoDescription" />

    <TextView
        android:id="@+id/or_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="22sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/line_two"
        android:layout_width="135dp"
        android:layout_height="3dp"
        android:text="-"
        android:textColor="@android:color/background_dark"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/line_one"
        android:layout_width="135dp"
        android:layout_height="3dp"
        android:text="-"
        android:textColor="@android:color/background_dark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/username"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="218dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="275dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="395dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>